# metafolder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  decisions.md  deny.toml  eslint.config.js  package-lock.json  package.json  poc.org  roadmap.org
crates/bench/: Cargo.toml
crates/bench/src/: gui.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/default-config/: config.toml
crates/cli/src/: client.rs  commands.rs  config.rs  dsl.rs  field_spec.rs  fieldspec.rs  gui.rs  http.rs  lib.rs  log.rs  main.rs  output.rs  progress.rs
crates/cli/tests/: cli_e2e.rs  gui_cli.rs
crates/core/: Cargo.toml
crates/core/default-config/: query-grammar
crates/core/src/: auth.rs  config.rs  config_sync.rs  date.rs  dsl.rs  entry.rs  lib.rs  metarecord.rs  progress.rs  query.rs  record.rs  sync.rs
crates/core/src/simplified/: engine.rs  grammar.rs  lexer.rs  load.rs  mod.rs  template.rs
crates/core/tests/: dsl.rs
crates/daemon/: Cargo.toml
crates/daemon/default-config/: config.toml  schema.default.json
crates/daemon/src/: config.rs  daemon_config.rs  db.rs  eligibility.rs  error.rs  executor.rs  fingerprint.rs  fs_meta.rs  fts.rs  history.rs  lib.rs  log.rs  main.rs  pagination.rs  query_exec.rs  reconcile.rs  regexp.rs  repo.rs  reserved.rs  routes.rs  schema.rs  simplified.rs  state.rs  tasks.rs  tree_cache.rs  watcher.rs
crates/daemon/src/index/: field_index.rs  id_registry.rs  mod.rs
crates/daemon/systemd/: metafolder-daemon.service
crates/daemon/tests/: auth_http.rs  coordinated_skip.rs  daemon_config.rs  eligibility.rs  executor.rs  fs_meta.rs  fts_oracle.rs  history_http.rs  http_api.rs  index_bench.rs  index_incremental.rs  index_oracle.rs  log_http.rs  osm.rs  query.rs  query_http.rs  reconcile.rs  repo.rs  rollback_http.rs  schema.rs  simplified.rs  storage.rs  tasks_http.rs  track_http.rs  tree_cache.rs  watcher_e2e.rs
crates/gui/: Cargo.toml  build.rs  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/default-config/: config.toml  keybindings.toml  style.css
crates/gui/default-config/panel-types/file/: index.html  main.js  playback.js
crates/gui/default-config/panel-types/file-manager/: index.html  main.js  tracked.js
crates/gui/default-config/panel-types/hello/: index.html  main.js
crates/gui/default-config/panel-types/help/: index.html  main.js
crates/gui/default-config/panel-types/log/: graph.js  index.html  main.js  selection.js
crates/gui/default-config/panel-types/message/: index.html  main.js
crates/gui/default-config/panel-types/metarecord-detail/: add-type.js  annotations.js  index.html  main.js
crates/gui/default-config/panel-types/metarecord-list/: columns.js  index.html  main.js
crates/gui/default-config/panel-types/ref-list/: index.html  main.js  queries.js
crates/gui/default-config/panel-types/repos/: index.html  main.js
crates/gui/default-config/panel-types/treeref/: index.html  main.js  queries.js
crates/gui/default-config/panel-types/workspace-info/: index.html  main.js
crates/gui/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/gui/frontend/src/: App.svelte
crates/gui/frontend/src/components/: CommandInput.svelte  ConfigOverlay.svelte  Slot.svelte  StatusBar.svelte  TabBar.svelte  TaskBar.svelte
crates/gui/frontend/src/lib/: bash.ts  commands.ts  cursor.ts  ipc.ts  (+4 more)
crates/gui/frontend/tests/: api.test.ts  bash.test.ts  bridge.test.ts  cache-oracle.test.ts  cache.test.ts  coalesce.test.ts  commands.test.ts  entry-detail-add-type.test.ts  entry-detail-annotations.test.ts  entry-list-columns.test.ts  file-manager-tracked.test.ts  finder.test.ts  help.test.ts  history.test.ts  keymatch.test.ts  log-graph.test.ts  log-selection.test.ts  menu.test.ts  metarecord-detail-add-type.test.ts  metarecord-detail-annotations.test.ts  metarecord-list-columns.test.ts  orphan.test.ts  paged-list.test.ts  panel-mount.test.ts  pick-runner.test.ts  placeholders.test.ts  playback-position.test.ts  record-detail-add-type.test.ts  record-detail-annotations.test.ts  record-list-columns.test.ts  ref-list-queries.test.ts  resolve.test.ts  schema-template.test.ts  served-modules.test.ts  text-input-context.test.ts  treeref-queries.test.ts  ui-dom.test.ts  ui.test.ts  value-widget.test.ts  visibility.test.ts
crates/gui/frontend/types/: metafolder-api.d.ts
crates/gui/panel-shim/: coalesce.js  finder.js  help.js  history.js  keymatch.js  menu.js  orphan.js  paged-list.js  resolve.js  schema-template.js  shim.js  ui.js  value-widget.js  visibility.js
crates/gui/panel-types/entry-detail/: add-type.js  annotations.js  index.html  main.js
crates/gui/panel-types/entry-list/: columns.js  index.html  main.js
crates/gui/panel-types/file/: index.html  main.js
crates/gui/panel-types/file-manager/: index.html  main.js  tracked.js
crates/gui/panel-types/hello/: index.html
crates/gui/panel-types/log/: index.html  main.js  selection.js
crates/gui/panel-types/message/: main.js
crates/gui/panel-types/metarecord-detail/: index.html  main.js
crates/gui/panel-types/metarecord-list/: index.html  main.js
crates/gui/panel-types/record-detail/: add-type.js  annotations.js  index.html  main.js
crates/gui/panel-types/record-list/: columns.js  index.html  main.js
crates/gui/panel-types/repos/: index.html  main.js
crates/gui/panel-types/workspace-info/: index.html  main.js
crates/gui/src/: bash_complete.rs  bash_complete.sh  command_registry.rs  commands.rs  config.rs  daemon_proxy.rs  events.rs  fs_commands.rs  history.rs  keybindings.rs  lib.rs  main.rs  media_support.rs  notifier.rs  proc.rs  reconcile.rs  sandbox.rs  shell_exec.rs  style_watcher.rs  thumbnails.rs  undo.rs
crates/gui/src/server/: bench.rs  command_wait.rs  fsraw.rs  gui_api.rs  input_wait.rs  mod.rs  panel_assets.rs  thumbnail.rs
crates/gui/src/state/: layout.rs  mod.rs  workspace.rs
crates/gui/tests/: auth_server.rs  config_install.rs  daemon_proxy.rs  gui_api.rs  history_resolve.rs  network_surface.rs  panel_invariants.rs  panel_server.rs  undo_navigate.rs
crates/gui/tests/common/: mod.rs
(+50 files in other folders)
