[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/cli",
    "crates/gui",
    "crates/bench",
]
resolver = "2"

# Keep target/ small: full debug info (the default) duplicates gigabytes of
# DWARF into every test binary. Line tables keep backtraces readable.
[profile.dev]
debug = "line-tables-only"

# External dependencies: no debug info at all (workspace members keep theirs).
[profile.dev.package."*"]
debug = false
