[package]
name = "metafolder-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metafolder-bench"

[dependencies]
anyhow = "1"
metafolder-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
