[package]
name = "metafolder-cli"
version = "0.1.0"
edition = "2021"

# The CLI binary is named `mf` (spec-main "* CLI").
[[bin]]
name = "mf"
path = "src/main.rs"

[dependencies]
metafolder-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
metafolder-daemon = { path = "../daemon" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
