[package]
name = "metafolder-cli"
version = "0.1.0"
edition = "2021"
publish = false

# The CLI binary is named `mf` (spec-main "* CLI").
[[bin]]
name = "mf"
path = "src/main.rs"

[dependencies]
metafolder-core = { path = "../core" }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
# Reading the GUI's config.toml to discover its port (spec-gui "mf gui").
toml = "0.8"

[dev-dependencies]
metafolder-daemon = { path = "../daemon" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
