[package]
name = "metafolder-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metafolder-daemon"

[dependencies]
anyhow = "1"
metafolder-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
