[package]
name = "metafolder-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metafolder-daemon"

[dependencies]
anyhow = "1"
metafolder-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
notify = "6"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
base64 = "0.22"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
