[package]
name = "metafolder-gui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "metafolder_gui"

[[bin]]
name = "metafolder-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
metafolder-core = { path = "../core" }
# devtools: the WebKit inspector stays available in release builds via
# the devtools:open command (the native context menu is disabled).
tauri = { version = "2", features = ["devtools"] }
tokio = { version = "1", features = ["full"] }
# axum 0.7 to match the daemon (same router/test patterns).
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }

# Already in the dependency tree via wry; used directly to react to
# WebKit web-process crashes (reload instead of a frozen window).
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_20"] }
# setrlimit on the sandboxed media helpers (sandbox.rs): bwrap bounds what a
# decoder can *reach*, rlimits bound what it can *consume*.
libc = "0.2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
